# procedural-image-generation

./: .gitignore  Cargo.toml  README.md  main.py  python_dependencies  research.py
.github/workflows/: rust.yml
TIS/: TIS.json
pydiagram/: diagram.py
pygen/: conformity.py  expansion.py  fragment.py  ga.py  generation.py  mc.py  mj.py  square.py  test.py  util.py
src/: backtrack.rs  eugenics.rs  genetic.rs  image.rs  lib.rs  main.rs  matrix.rs  node.rs  procedure.rs  sudoku.rs  util.rs
src/procedures/: backtrack.rs  fragment.rs  mod.rs
src/structures/: matrix.rs  mod.rs  node.rs
www/: index.html  index.js  package-lock.json  package.json
