[package]
name = "tiled-image-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tit"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
serde = { version = "1.0.137", features = [ "derive" ] }
serde_json = "1.0"
clap = { version = "3.0", features = ["derive", "cargo"] }
rand = "0.8.5"
priority-queue = "1.2.1"

